--- a/css/styles.css
+++ b/css/styles.css
@@ -38,10 +38,16 @@ body {
 
 h3{
   text-align: center;
+  border: 2px solid black;
+  padding: 10px;
+  background-color: white
 }
 
 .footer{
   clear: both;
+  padding-top: 20px;
+  margin-left: 40%;
+  margin-right: 40%;
 }
 
 @media screen and (max-width: 1000px){
